# prompt-analyzer

./: .gitignore  README.md  analysis_output.json  package-lock.json  pyproject.toml  requirements.txt  scan_cursor_config.py  temp_analyze.py
.cursor/docs/: PRD.md  implementation-plan.md
prompt_analyzer/: __init__.py
prompt_analyzer/cli/: commands.py  main.py  setup.py
prompt_analyzer/hooks/: generator.py  installer.py
prompt_analyzer/recommend/: __init__.py  analyzer.py  html_output.py  scanner.py
prompt_analyzer/storage/: __init__.py  config.py  crud.py  database.py
