[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-analyzer"
version = "1.0.0"
description = "A local-first tool that captures and analyzes Cursor prompts for quality and effectiveness"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Prompt Analyzer Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "thefuzz>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
prompt-analyzer = "prompt_analyzer.cli.main:cli"

[tool.setuptools]
packages = ["prompt_analyzer", "prompt_analyzer.cli", "prompt_analyzer.hooks", "prompt_analyzer.storage", "prompt_analyzer.analysis", "prompt_analyzer.ui"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.js", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--verbose",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

